--- a/styles/loader.scss
+++ b/styles/loader.scss
@@ -14,7 +14,8 @@
         border: 3px solid transparent;
         border-top-color: $cyan;
         border-bottom-color: $cyan;
-        animation: spin 1s linear infinite;
+        -webkit-animation: spin 1s linear infinite;
+                animation: spin 1s linear infinite;
         &::after{
             content: '';
             position: absolute;
@@ -23,7 +24,8 @@
             border: 3px solid transparent;
             border-top-color: $primary;
             border-bottom-color: $primary;
-            animation: spin-reverse 2s linear infinite;
+            -webkit-animation: spin-reverse 3s linear infinite;
+                    animation: spin-reverse 3s linear infinite;
         }
         &::before{
             content: '';
@@ -33,8 +35,18 @@
             border: 3px solid transparent;
             border-top-color: $info;
             border-bottom-color: $info;
-            animation: spin-reverse 3s linear infinite;
+            -webkit-animation: spin-reverse 5s linear infinite;
+                    animation: spin-reverse 5s linear infinite;
         }
+    }
+}
+
+@-webkit-keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
     }
 }
 
@@ -44,6 +56,15 @@
     }
     100%{
         transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin-reverse {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(-360deg);
     }
 }
 
@@ -58,7 +79,20 @@
 
 
 .loader-end{
-    animation: loader-anim 1.5s ease-in forwards;
+    -webkit-animation: loader-anim 1.5s ease-in forwards;
+            animation: loader-anim 1.5s ease-in forwards;
+}
+
+@-webkit-keyframes loader-anim {
+    0%{
+        // transform-origin: center;
+        // transform: scaleX(1);
+        opacity: 1;
+    }
+    100%{
+        // transform: scaleX(0);
+        opacity: 0;
+    }
 }
 
 @keyframes loader-anim {
