debut du header et du nav

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
-@import 'colors';
 @import 'settings';
-@import 'style';
 @import 'loader';
+@import 'toggleMode';
+@import 'navigation';
+@import 'header';
