--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -1,22 +1,31 @@
-@font-face {
-    font-family: 'robotolight';
-    src: url('../fonts/roboto-light-webfont.woff2') format('woff2'),
-         url('../fonts/roboto-light-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&family=Grey+Qo&family=Parisienne&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500;700&display=swap');
 
-@font-face {
-    font-family: 'space_monoregular';
-    src: url('../fonts/spacemono-regular-webfont.woff2') format('woff2'),
-         url('../fonts/spacemono-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+$indigo: #5603ad;
+$purple: #8965e0;
+$pink: #f3a4b5;
+$yellow: #ffd600;
+$cyan: #2bffc6;
+$gray: #8898aa;
+$gray-dark: #32325d;
+$light: #ced4da;
+$lighter: #e9ecef;
+$primary: #5e72e4;
+$secondary: #f4f5f7;
+$success: #2dce89;
+$info: #11cdef;
+$warning: #fb6340;
+$danger: #f5365c;
+$light: #adb5bd;
+$dark: #212529;
+$default: #172b4d;
+$white: #fff;
+$darker: black;
 
 *, ::before, ::after{
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Poppins', san-serif;
+    color: $gray;
+    font-weight: 300;
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
@@ -31,16 +40,12 @@ li{
     list-style: none;
 }
 
-i{
-    color: $white;
-}
-
 img{
     max-width: 100%;
     height: auto;
 }
 
 body{
-    background-color: $darker;
+    background-color: $white;
 }
 
