--- a/styles/loader.scss
+++ b/styles/loader.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 5;
     &-load{
         position: relative;
         width: 150px;
