--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -10,7 +10,7 @@
         grid-area: 1 / 3 / 2 / 4;
         font-family: 'Grey Qo', cursive;
         font-size: 35px;
-        color: $dark;
+        color: $gray-dark;
     }
     &-page{
         display: flex;
