--- a/styles/header.scss
+++ b/styles/header.scss
@@ -66,3 +66,70 @@
         }
     }
 }
+
+@media screen and (max-width: 1050px) {
+    .containers{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 95%;
+        height: auto;
+    }
+    .header{
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        width: 100%;
+        &-img{
+            min-width: 400px;
+            height: calc(400px * 4/3);
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &::before{
+            width: 300px;
+            height: 300px;
+            top: -75px;
+            left: 75px;
+        }
+        &::after{
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .containers{
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .header{
+        &-img{
+            min-width: 300px;
+            height: calc(300px * 4/3);
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-container{
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width: 415px) {
+    .header{
+        &::before{
+            width: 200px;
+            height: 200px;
+            top: -75px;
+            left: 50px;
+        }
+    }
+}
