--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 @import 'settings';
 @import 'loader';
-@import 'toggleMode';
+@import 'buttonFixe';
 @import 'navigation';
 @import 'header';
+@import 'about';
