--- a/styles/education.scss
+++ b/styles/education.scss
@@ -11,6 +11,9 @@
         flex-direction: column;
         margin: 1rem;
         &-title{
+            h1.active{
+               color: $purple; 
+            }
             h1{
                 text-align: center;
                 color: $gray-dark;
@@ -18,6 +21,9 @@
                 font-size: 35px;
                 font-weight: 500;
                 margin-bottom: 20px;
+            }
+            h2.active{
+                color: $light;    
             }
             h2{
                 text-align: center;  
@@ -41,8 +47,10 @@
             box-shadow: 0 2px 10px rgba($dark, $alpha: 0.2);
             h3{
                 color: $gray-dark;
+                font-weight: bold;
                 i{
                     color: $gray-dark;
+                    font-weight: bold;
                 }
             }
             b{
