--- a/styles/loader.scss
+++ b/styles/loader.scss
@@ -1,12 +1,28 @@
 .loader{
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background: $white;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    &-bloc{
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: $white;
+        z-index: 1000;
+    }
+    &-left{
+        left: 0;
+    }
+    &-right{
+        right: 0;
+    }
     &-load{
         position: relative;
         width: 150px;
@@ -15,6 +31,7 @@
         border: 3px solid transparent;
         border-top-color: $cyan;
         border-bottom-color: $cyan;
+        z-index: 1001;
         -webkit-animation: spin 1s linear infinite;
                 animation: spin 1s linear infinite;
         &::after{
@@ -78,33 +95,21 @@
     }
 }
 
-
-.loader-end{
-    -webkit-animation: loader-anim 1.5s ease-in forwards;
-            animation: loader-anim 1.5s ease-in forwards;
+.loader-end {
+    visibility: hidden;
 }
 
-@-webkit-keyframes loader-anim {
-    0%{
-        // transform-origin: center;
-        // transform: scaleX(1);
-        opacity: 1;
-    }
-    100%{
-        // transform: scaleX(0);
-        opacity: 0;
-    }
+.loader-end .loader-load{
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
 }
 
-@keyframes loader-anim {
-    0%{
-        // transform-origin: center;
-        // transform: scaleX(1);
-        opacity: 1;
-    }
-    100%{
-        // transform: scaleX(0);
-        opacity: 0;
-        z-index: -5;
-    }
+.loader-end .loader-left{
+    transform: translateX(-100%);
+    transition: all 0.7s .3s ease-in-out;
+}
+
+.loader-end .loader-right{
+    transform: translateX(100%);
+    transition: all 0.7s .3s ease-in-out;
 }
