--- a/styles/education.scss
+++ b/styles/education.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    margin-bottom: 5rem;
     &-cards{
         width: 60%;
         display: flex;
