ajout du center sur la partie skills

--- a/styles/skillest.scss
+++ b/styles/skillest.scss
@@ -76,6 +76,7 @@
                 }
                 div{
                     margin: 1rem;
+                    text-align: center;
                 }
                 &:hover{
                     transform: translateX(-10px);
