--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -19,6 +19,7 @@ $lighter: #adb5bd;
 $dark: #212529;
 $default: #172b4d;
 $white: #fff;
+$gray-white: #f4f5f7;
 $darker: black;
 
 *, ::before, ::after{
