--- a/styles/services.scss
+++ b/styles/services.scss
@@ -83,6 +83,7 @@
                 h2{
                     color: $info;
                     font-weight: 500;
+                    text-align: center;
                 }
             }
             &-card:nth-child(2){
