--- a/styles/services.scss
+++ b/styles/services.scss
@@ -95,6 +95,7 @@
                 h2{
                     color: $cyan;
                     font-weight: 500;
+                    text-align: center;
                 }
             }
         }
